src/syntax/snapshots/ling__syntax__token_stream__tests__token_tree_1.snap
---
source: src/syntax/token_stream.rs
expression: "get_tree(\"{{{}}}\")"
---
(TokenStream([
  Group(
    bracket_kind: Curly,
    tokens: TokenStream([
      Group(
        bracket_kind: Curly,
        tokens: TokenStream([
          Group(
            bracket_kind: Curly,
            tokens: TokenStream([]),
          ),
        ]),
      ),
    ]),
  ),
]), [])
