src/syntax/snapshots/ling__syntax__token_stream__tests__token_tree_4.snap
---
source: src/syntax/token_stream.rs
expression: "get_tree(\"]{}[\")"
---
(TokenStream([
  Group(
    bracket_kind: Curly,
    tokens: TokenStream([]),
  ),
  Group(
    bracket_kind: Square,
    tokens: TokenStream([]),
  ),
]), [
  Token(
    span: Span(
      start: 0,
      end: 1,
    ),
    kind: Bracket(Closing(Square)),
  ),
  Token(
    span: Span(
      start: 3,
      end: 4,
    ),
    kind: Bracket(Opening(Square)),
  ),
])
